--- a/src/main/resources/message.yml
+++ b/src/main/resources/message.yml
@@ -2,9 +2,18 @@ error:
   args: "&#98FB98[MythicChanger] &cWrong command usage, if you need help, use /mchanger help!"
   in-game: "&#98FB98[MythicChanger] &cYou have to use this command in game!"
   miss-permission: "&#98FB98[MythicChanger] &cYou don't have permission to use this command!"
-  rule-not-found: "&#98FB98[MythicChanger] &cWe can't find this rule!"
+  item-not-found: "&#98FB98[MythicChanger] &cWe can't find this apply item called {item}!"
+  player-not-found: "&#98FB98[MythicChanger] &cWe can't find player {player}!"
+  creative-mode: "&#98FB98[MythicChanger] &cThis feature does not support creative mode for now!"
+  item-only-one: "&#98FB98[MythicChanger] &cYour apply item can not be stacked to more than 1 amount!"
 
 plugin:
   reloaded: "&#98FB98[MythicChanger] &fPlugin reloaded!"
   saved: "&#98FB98[MythicChanger] &fItem Saved!"
-  changed: "&#98FB98[MythicChanger] &fItem Changed!"
+  item-gave: "&#98FB98[MythicChanger] &aGave {player} apply item {item} x{amount}!"
+
+apply-item-success: "&#98FB98[MythicChanger] &fSuccess consume apply item!"
+deapply-item-success: "&#98FB98[MythicChanger] &fSuccess consume rollback item!"
+already-has-rule: "&#98FB98[MythicChanger] &fThis item already has applied other rule!"
+do-not-has-rule: "&#98FB98[MythicChanger] &fThis item does not have any rule to rollback!"
+do-not-apply: "&#98FB98[MythicChanger] &fThis apply item does not work on this item!"
