--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -26,4 +26,4 @@ apply-items:
     name: '&fRollback book'
     lore:
       - '&7Drag this item onto the item you want to rollback its apply.'
-    apply-rule: deapply
+    apply-rule: deapply # This means deapply, not rule ID.
