--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -8,6 +8,12 @@ real-change-trigger:
   InventoryClickEvent:
     enabled: true
 
+# Some change rules do not support real change perfectly.
+# For example, add-name-first rule require you also set contains-name rule.
+# Otherwise, each time you interact with this item, the name of it will have additional content added due to this rule.
+# Like: 'Good Good Good Good Good Diamond Sword' if you set add-name-first: 'Good' and interact with this item 5 times.
+bypass-real-change-limit: false
+
 # Premium version only
 apply-items:
   A:
