--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -14,6 +14,10 @@ real-change-trigger:
 # Like: 'Good Good Good Good Good Diamond Sword' if you set add-name-first: 'Good' and interact with this item 5 times.
 bypass-real-change-limit: false
 
+# Some change rules have incompatibility issues with other packet-based item plugins.
+# Like our EnchantmentSlots, and Auxilor plugins (EcoItems, EcoEnchants, ect.)
+ignore-fake-change-warning: false
+
 # Premium version only
 apply-items:
   A:
