--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>cn.superiormc</groupId>
     <artifactId>MythicChanger</artifactId>
-    <version>1.3.7</version>
+    <version>1.4.0</version>
     <packaging>jar</packaging>
 
     <name>MythicChanger</name>
@@ -100,9 +100,16 @@
 
     <dependencies>
         <dependency>
+            <groupId>io.lumine</groupId>
+            <artifactId>MythicDungeon</artifactId>
+            <version>1.2.2</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/MythicDungeons-1.0.0.jar</systemPath>
+        </dependency>
+        <dependency>
             <groupId>io.papermc.paper</groupId>
             <artifactId>paper-api</artifactId>
-            <version>1.20.4-R0.1-SNAPSHOT</version>
+            <version>1.20.5-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
