--- a/src/main/resources/rules/default.yml
+++ b/src/main/resources/rules/default.yml
@@ -15,23 +15,23 @@ match-item:
     - 'test'
 
 fake-changes:
-  add-name-first: '&fGood '
-  add-lore-last:
-    - '&f&lCommon'
-  add-lore-prefix: '%img_tooltip1%'
-  set-custom-model-data: 5
-  add-flags:
-    - 'HIDE_ENCHANTS'
+  #add-name-first: '&fGood '
+  #add-lore-last:
+  #  - '&f&lCommon'
+  #add-lore-prefix: '%img_tooltip1%'
+  #set-custom-model-data: 5
+  #add-flags:
+  #  - 'HIDE_ENCHANTS'
 
 real-changes:
-  add-enchants:
-    POWER: 1
-  remove-enchants:
-    - 'POWER'
-  remove-all-enchants: true
-  replace-item:
-    material: golden_sword
-  set-lore:
-    - '&7A good sword that all adventures should use!'
-    - '&f&lCommon'
-  set-name: '&fGood Diamond Sword'
+  #add-enchants:
+  #  POWER: 1
+  #remove-enchants:
+  #  - 'POWER'
+  #remove-all-enchants: true
+  #replace-item:
+  #  material: golden_sword
+  #set-lore:
+  #  - '&7A good sword that all adventures should use!'
+  #  - '&f&lCommon'
+  #set-name: '&fGood Diamond Sword'
