--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>cn.superiormc</groupId>
     <artifactId>MythicChanger</artifactId>
-    <version>1.4.7</version>
+    <version>1.4.8</version>
     <packaging>jar</packaging>
 
     <name>MythicChanger</name>
@@ -100,11 +100,11 @@
 
     <dependencies>
         <dependency>
-            <groupId>io.lumine</groupId>
-            <artifactId>MythicDungeon</artifactId>
-            <version>1.2.2</version>
+            <groupId>cn.superiormc</groupId>
+            <artifactId>ManyouItems</artifactId>
+            <version>1.0.0</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}/lib/MythicDungeons-1.0.0.jar</systemPath>
+            <systemPath>${project.basedir}/lib/ManyouItems-1.0.0.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>io.papermc.paper</groupId>
