--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,7 +2,15 @@
 #
 # Read the Wiki here: https://mythicchanger.superiormc.cn/
 
-language: en_US
+config-files:
+  language: en_US
+  # Premium version only.
+  minecraft-locate-file:
+    # After enable, we will autoload Minecraft locate file when we need know an item's locate name.
+    # It will make server little lag when loading this file because this file is very large.
+    enabled: true
+    generate-new-one: false
+    file: 'zh_cn.json'
 
 # Paper only feature.
 use-component:
@@ -26,7 +34,7 @@ bypass-real-change-limit: false
 # Like our EnchantmentSlots, and Auxilor plugins (EcoItems, EcoEnchants, ect.)
 ignore-fake-change-warning: false
 
-# Premium version only
+# Premium version only,
 apply-items:
   A:
     material: PAPER
