[1.6.0] Action, condition and fixes

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,6 +2,8 @@
 #
 # Read the Wiki here: https://mythicchanger.superiormc.cn/
 
+debug: false
+
 config-files:
   language: en_US
   # Premium version only.
