[2.1.1] apply item improve

--- a/src/main/resources/apply_items/Deapply.yml
+++ b/src/main/resources/apply_items/Deapply.yml
@@ -2,5 +2,7 @@ material: BOOK
 name: '&fRollback book'
 lore:
   - '&7Drag this item onto the item you want to rollback its apply.'
-apply-rule: deapply # This means deapply, not rule ID.
-apply-real-change: true
+real-changes:
+  deapply: true
+match-item:
+  has-apply: true
