--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>cn.superiormc</groupId>
     <artifactId>MythicChanger</artifactId>
-    <version>2.0.3</version>
+    <version>2.1.2</version>
     <packaging>jar</packaging>
 
     <name>MythicChanger</name>
@@ -262,6 +262,12 @@
             <version>6.2.0.6</version>
             <scope>provided</scope>
             <classifier>shaded</classifier>
+        </dependency>
+        <dependency>
+            <groupId>com.github.Redempt</groupId>
+            <artifactId>Crunch</artifactId>
+            <version>2.0</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
