--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -27,6 +27,10 @@ paper-api:
     # Only for Item Format for now, does not support item modify in rule.
     item: false
 
+math:
+  enabled: true
+  scale: 2
+
 real-change-trigger:
   SetSlotTrigger:
     enabled: true
@@ -54,6 +58,7 @@ check-chests-only: true
 # Please do not modify the value here unless you know what you are doing.
 change-rule-weight:
   add-enchants: 2
+  add-attributes: 5
   add-flags: 3
   add-lore-first: 11
   add-lore-last: 12
@@ -117,3 +122,5 @@ change-gui:
 # Support value: GUI, DRAG
 # GUI mode is in EARLY ALPHA TEST, be careful to use!
 apply-item-mode: DRAG
+
+default-apply-item-limit: 1
