--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: MythicChanger
 version: '${project.version}'
 main: cn.superiormc.mythicchanger.MythicChanger
 api-version: '1.14'
+folia-supported: true
 author: PQguanfang
 depend:
   - ProtocolLib
