--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>cn.superiormc</groupId>
     <artifactId>MythicChanger</artifactId>
-    <version>2.3.10</version>
+    <version>2.4.1</version>
     <packaging>jar</packaging>
 
     <name>MythicChanger</name>
@@ -104,6 +104,11 @@
             <id>codemc</id>
             <url>https://repo.codemc.io/repository/maven-public/</url>
         </repository>
+        <repository>
+            <id>momirealms repo</id>
+            <url>https://repo.momirealms.net/releases/</url>
+        </repository>
+
     </repositories>
 
     <dependencies>
@@ -118,12 +123,6 @@
             <groupId>io.papermc.paper</groupId>
             <artifactId>paper-api</artifactId>
             <version>1.21.3-R0.1-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.comphenix.protocol</groupId>
-            <artifactId>ProtocolLib</artifactId>
-            <version>5.0.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -275,6 +274,24 @@
             <version>0.5.0</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/nexo-0.5.0-dev.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>net.momirealms</groupId>
+            <artifactId>craft-engine-core</artifactId>
+            <version>0.0.34</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.momirealms</groupId>
+            <artifactId>craft-engine-bukkit</artifactId>
+            <version>0.0.34</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.retrooper</groupId>
+            <artifactId>packetevents-spigot</artifactId>
+            <version>2.6.0</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
