--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,7 +5,7 @@ api-version: '1.14'
 folia-supported: true
 author: PQguanfang
 depend:
-  - ProtocolLib
+  - packetevents
 softdepend:
   - EcoItems
   - EcoArmor
