[2.4.3] real change fix

--- a/src/main/resources/apply_items/Deapply.yml
+++ b/src/main/resources/apply_items/Deapply.yml
@@ -1,7 +1,8 @@
-material: BOOK
-name: '&fRollback book'
-lore:
-  - '&7Drag this item onto the item you want to rollback its apply.'
+display-item:
+  material: BOOK
+  name: '&fRollback book'
+  lore:
+    - '&7Drag this item onto the item you want to rollback its apply.'
 real-changes:
   deapply: true
 match-item:
