--- a/plugin/src/main/resources/config.yml
+++ b/plugin/src/main/resources/config.yml
@@ -103,6 +103,7 @@ change-rule-weight:
   set-amount: 59
   deapply: 61
   mi-update-lore: 115
+  add-price-lore: 200
 
 # Premium version only.
 change-gui:
