[3.0.0] English:         The apply-item-mode option in config.yml is now replaced with the apply-item-mode option that is scattered throughout the various apply item configs.         Two new apply item modes have been added: CUSTOM and GENERAL.         You can now set up more custom change GUIs using CUSTOM apply item mode.         Each apply item can now have its own apply item mode, including DRAG, GUI, GENERAL, and CUSTOM.         Fixed an issue where using /mc openchangegui in the console would sometimes result in an error.
        中文：
        现在 config.yml 中的 apply-item-mode 选项替换为分散在各个 apply item configs 中的 apply-item-mode 选项。
        新增了2种新的 apply item mode，分别是 CUSTOM 和 GENERAL。
        你现在可以通过 CUSTOM apply item mode 设置更多的自定义change gui了。
        现在各个apply item可以独立设置apply item mode，包括 DRAG，GUI，GENERAL，CUSTOM。
        修复了在部分情况下在控制台使用 /mc openchangegui 将会报错的情况。

--- a/plugin/src/main/resources/config.yml
+++ b/plugin/src/main/resources/config.yml
@@ -134,10 +134,30 @@ change-gui:
       name: '&bDrag the apply item below.'
   close-if-fail: true
 
-# Premium version only.
-# Support value: GUI, DRAG
-# GUI mode is in EARLY ALPHA TEST, be careful to use!
-# Require server restart.
-apply-item-mode: DRAG
+# MY_CUSTOM:
+#   title: 'Change your item!'
+#   size: 27
+#   item-slot: 11
+#   book-slot: 15
+#   confirm-slot: 22
+#   confirm-item:
+#     material: ANVIL
+#     name: '&eConfirm'
+#     lore:
+#       - '&7Click to confirm change the item!'
+#   custom-item:
+#     2:
+#       material: PAPER
+#       name: '&bDrag the item you want change below.'
+#     6:
+#       material: BOOK
+#       name: '&bDrag the apply item below.'
+#   close-if-fail: true
+
+apply-item-mode:
+  drag-enabled: true
+  # GUI mode is in EARLY ALPHA TEST, be careful to use!
+  # Premium version only.
+  gui-enabled: true
 
 default-apply-item-limit: 1
