[3.0.5] Fixed language option in config.yml does not work since 3.0.4.         ItemFormat Update: Added those item component support:         attribute->each single attribute modifier->display-mode and display text         equippable->can-be-sheared and shear-sound         damage-type (Require 1.21.11)         kinetic-weapon (Require 1.21.11)         minimum-attack-charge (Require 1.21.11)         piercing-weapon (Require 1.21.11)         swing-animation (Require 1.21.11)         use-effects (Require 1.21.11)         attack-range-key (Require 1.21.11)         component option in ItemFormat now require Paper 1.21.6+ version instead of previous 1.21.5+ version.         Added debuild-item-method option in config.yml file.         component option inside ItemFormat now can be parse into yml format by setting this option to true.         This feature is still in early alpha.

--- a/plugin/src/main/resources/config.yml
+++ b/plugin/src/main/resources/config.yml
@@ -33,6 +33,8 @@ config-files:
     generate-new-one: false
     file: 'zh_cn.json'
 
+debuild-item-method: 'LEGACY'
+
 # Premium version only.
 math:
   enabled: true
