--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>cn.superiormc</groupId>
+        <groupId>cn.superiormc.mythicchanger</groupId>
         <artifactId>MythicChanger</artifactId>
         <version>3.0.7</version>
         <relativePath>../pom.xml</relativePath> <!-- 如果 plugin 和根目录同级 -->
@@ -24,21 +24,21 @@
     <dependencies>
         <!-- Core module -->
         <dependency>
-            <groupId>cn.superiormc</groupId>
+            <groupId>cn.superiormc.mythicchanger</groupId>
             <artifactId>core</artifactId>
             <version>${project.version}</version>
         </dependency>
 
         <!-- Spigot module -->
         <dependency>
-            <groupId>cn.superiormc</groupId>
+            <groupId>cn.superiormc.mythicchanger</groupId>
             <artifactId>spigot</artifactId>
             <version>${project.version}</version>
         </dependency>
 
         <!-- Paper module -->
         <dependency>
-            <groupId>cn.superiormc</groupId>
+            <groupId>cn.superiormc.mythicchanger</groupId>
             <artifactId>paper</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -47,7 +47,7 @@
         <dependency>
             <groupId>io.papermc.paper</groupId>
             <artifactId>paper-api</artifactId>
-            <version>1.21.5-R0.1-SNAPSHOT</version>
+            <version>1.21.11-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
